*Edge*

* Make rake test:uncommitted work with Git. [Tim Pope]

* Added Thin support to script/server.  #488 [Bob Klosinski]

* Fix script/about in production mode.  #370 [Cheah Chu Yeow, Xavier Noria, David Krmpotic]

* Add the gem load paths before the framework is loaded, so certain gems like RedCloth and BlueCloth can be frozen.

* Fix discrepancies with loading rails/init.rb from gems.

* Plugins check for the gem init path (rails/init.rb) before the standard plugin init path (init.rb)  [Jacek Becela]

* Changed all generated tests to use the test/do declaration style [DHH]

* Wrapped Rails.env in StringInquirer so you can do Rails.env.development? [DHH]

* Fixed that RailsInfoController wasn't considering all requests local in development mode (Edgard Castro) [#310 state:resolved]


*2.1.0 (May 31st, 2008)*

* script/dbconsole fires up the command-line database client.  #102 [Steve Purcell]

* Fix bug where plugin init.rb files from frozen gem specs weren't being run.  (pjb3) [#122 state:resolved]

* Made the location of the routes file configurable with config.routes_configuration_file (Scott Fleckenstein) [#88]

* Rails Edge info returns the latest git commit hash [Francesc Esplugas]

* Added Rails.public_path to control where HTML and assets are expected to be loaded from (defaults to Rails.root + "/public") #11581 [nicksieger]

* rake time:zones:local finds correct base utc offset for zones in the Southern Hemisphere [Geoff Buesing]

* Don't require rails/gem_builder during rails initialization, it's only needed for the gems:build task. [rick]

* script/performance/profiler compatibility with the ruby-prof >= 0.5.0. Closes #9176. [Catfish]

* Flesh out rake gems:unpack to unpack all gems, and add rake gems:build for native extensions. #11513 [ddollar]

  rake gems:unpack             # unpacks all gems
  rake gems:unpack GEM=mygem   # unpacks only the gem 'mygem'
  
  rake gems:build              # builds all unpacked gems